--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,8 @@
 
 body {
   background-image: url("./image.jpg");
+  background-color: #f6f6f6;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -35,14 +37,19 @@ header ul {
   padding-right: 2rem;
 }
 
-header a {
+header li {
   text-decoration: none;
   color: white;
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
 }
 
-header a.active {
+header li:hover {
+  cursor: pointer;
+  color: #ef7038;
+}
+
+header li.active {
   background-color: #ef7038;
   border-radius: 1rem;
 }
@@ -50,8 +57,6 @@ header a.active {
   width: 50%;
   margin-top: 10rem;
   padding-left: 2rem;
-  display: flex;
-  flex-direction: column;
 }
 
 h1 {
