--- a/src/style.css
+++ b/src/style.css
@@ -12,10 +12,8 @@
 }
 
 body {
-  background-image: url("./image.jpg");
   background-color: #f6f6f6;
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* height: 200vh; */
 }
 
 header {
@@ -23,6 +21,10 @@ header {
   background-color: rgba(0, 0, 0, 0.9);
   display: flex;
   align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 header img {
@@ -59,6 +61,15 @@ header li.active {
   padding-left: 2rem;
 }
 
+.bg-image {
+  width: 100vw;
+  height: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+
 h1 {
   font-family: "Prata", serif;
   font-size: 3rem;
@@ -69,4 +80,65 @@ h1 {
 p {
   line-height: 1.5rem;
   font-weight: 500;
+}
+
+.menu {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  justify-items: center;
+}
+
+.meal-card {
+  width: 300px;
+  height: 400px;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0px 1px 5px -1px black;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.meal-image {
+  object-fit: contain;
+  width: 100%;
+  grid-column: 1 /-1;
+}
+
+.meal-title {
+  padding: 0 1rem;
+  grid-column: 1/-1;
+}
+
+.meal-description {
+  font-size: 0.75rem;
+  color: darkgray;
+  padding: 0 1rem;
+  line-height: 1rem;
+  grid-column: 1/-1;
+  border-bottom: 1px solid darkgray;
+}
+
+.order {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.25rem;
+  align-self: stretch;
+  padding: 0 1rem;
+  border-right: 1px solid darkgray;
+}
+
+.order-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.order-text {
+  font-size: 0.85rem;
+}
+
+.price {
+  font-weight: 500;
+  align-self: center;
+  justify-self: center;
 }
