added about section

--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,7 @@ header li.active {
   width: 50%;
   margin-top: 10rem;
   padding-left: 2rem;
+  margin-bottom: 1rem;
 }
 
 .bg-image {
@@ -142,4 +143,30 @@ p {
   font-weight: 500;
   align-self: center;
   justify-self: center;
+}
+
+.about {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+  width: 90vw;
+}
+
+.about-image {
+  width: 50%;
+  height: auto;
+}
+
+.about-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  justify-content: center;
+}
+
+.about-btn {
+  padding: 1rem 2rem;
+  width: max-content;
+  border-radius: 1.5rem;
+  cursor: pointer;
 }
